<resources>
    <string name="app_name" translatable="false">Inventory base</string>

    <string name="add_hint_photoUrl">Photo Url</string>
    <string name="add_hint_name">Product name</string>
    <string name="add_hint_quantity">quantity</string>
    <string name="add_title">Add product</string>
    <string name="add_dialog_ok">Add</string>
    <string name="add_dialog_cancel">Cancel</string>

    <string name="common_validate_field_required">Required field</string>
    <string name="common_validate_min_quantity">The value must be greater than zero.</string>

    <string name="description_main_fab_add">Add product button</string>
    <string name="description_img_product">Product image</string>

    <string name="item_product_data">%s \n(x%d)</string>
    <string name="item_product_score">%.2f</string>

    <string name="main_msg_welcome">Welcome…</string>
    <string name="main_menu_title_exit">Exit</string>
    <string name="main_msg_go_history">Go to history</string>
    <string name="main_msg_go_exit">Exit</string>
    <string name="main_msg_not_found">Action not found</string>
</resources>